@@ -247,10 +247,21 @@
                     <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
                     <includes>
                         <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
+                    <includes>
                         <include>**/*IT.java</include>
                     </includes>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
